# grasp

./: .gitignore  Makefile  README.md  flake.nix  ghc-lisp.cabal  grasp.cabal  mkdocs.yml
.github/workflows/: docs.yml
artifacts/: devlog.md  plan_task2.md  plan_task3.md
artifacts/skills/: ghc-api-info-table-mismatch-rebox.md  unpackClosure-seq-before-inspect.md
cbits/: grasp_boot.c  grasp_layout_check.c  grasp_rts.c  grasp_rts.h  rts_bridge.c  rts_bridge.h
docs/: architecture.md  delimited-continuations.md  index.md  language.md  motivation.md  related-work.md  roadmap.md  stg-machine.md
docs/plans/: 2026-03-05-ghc-lisp-design.md  2026-03-05-ghc-lisp-implementation.md  2026-03-06-dynamic-lookup-design.md  2026-03-06-dynamic-lookup.md  2026-03-06-macro-system-design.md  2026-03-06-macro-system.md  2026-03-06-native-stg-closures-design.md  2026-03-06-native-stg-closures.md  2026-03-06-opt-in-laziness-design.md  2026-03-06-opt-in-laziness.md  2026-03-08-concurrency-design.md  2026-03-08-concurrency.md  2026-03-08-module-system-design.md  2026-03-08-module-system.md  2026-03-08-phase7-design.md  2026-03-08-phase7.md  2026-03-08-phase8-design.md  2026-03-08-phase8.md  2026-03-08-quoter-stm-design.md  2026-03-09-c-native-bootstrap-design.md  2026-03-09-c-native-bootstrap.md  2026-03-09-grasp-v2-core-interpreter.md  2026-03-09-grasp-v2-foundations-design.md
lib/: prelude.gsp
src/: Main.hs
src/GhcLisp/: Eval.hs  HaskellInterop.hs  Parser.hs  Printer.hs  RtsBridge.hs  Types.hs
src/Grasp/: DynDispatch.hs  Eval.hs  HaskellInterop.hs  HsRegistry.hs  NativeTypes.hs  Parser.hs  Printer.hs  RtsBridge.hs  RuntimeCheck.hs  Types.hs
test/: DebugRts.hs  DynLookupSpec.hs  EvalSpec.hs  InteropSpec.hs  NativeTypesSpec.hs  ParserSpec.hs  PrinterSpec.hs  RtsBridgeSpec.hs  RuntimeCheckSpec.hs  Spec.hs  StmSpec.hs
v1/cbits/: rts_bridge.h
v1/src/Grasp/: Continuations.hs  DynDispatch.hs  DynLookup.hs  HsRegistry.hs  NativeTypes.hs  Parser.hs  Printer.hs  Types.hs
