cabal-version:   3.0
name:            ghc-lisp
version:         0.1.0.0
build-type:      Simple

executable ghc-lisp
  default-language: GHC2021
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    GhcLisp.Types
    GhcLisp.Parser
    GhcLisp.Eval
    GhcLisp.Printer
  build-depends:
    , base        >= 4.18 && < 5
    , text
    , megaparsec
    , containers
    , mtl
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite ghc-lisp-test
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Spec.hs
  other-modules:
    GhcLisp.Types
    GhcLisp.Parser
    GhcLisp.Eval
    GhcLisp.Printer
    ParserSpec
    EvalSpec
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    , base        >= 4.18 && < 5
    , text
    , megaparsec
    , containers
    , mtl
    , hspec
    , hspec-megaparsec
  ghc-options:
    -threaded
    -rtsopts
