cabal-version:   3.0
name:            grasp
version:         0.1.0.0
build-type:      Simple

executable grasp
  default-language: GHC2021
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Grasp.Types
    Grasp.Parser
    Grasp.Eval
    Grasp.Printer
    Grasp.RtsBridge
    Grasp.HsRegistry
    Grasp.HaskellInterop
    Grasp.NativeTypes
    Grasp.DynLookup
    Grasp.DynDispatch
  c-sources:      cbits/rts_bridge.c
  include-dirs:   cbits
  build-depends:
    , base        >= 4.18 && < 5
    , ghc-prim
    , ghc
    , ghc-paths
    , text
    , megaparsec
    , containers
    , mtl
    , directory
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite grasp-test
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Spec.hs
  other-modules:
    Grasp.Types
    Grasp.Parser
    Grasp.Eval
    Grasp.Printer
    Grasp.RtsBridge
    Grasp.HsRegistry
    Grasp.HaskellInterop
    Grasp.NativeTypes
    Grasp.DynLookup
    Grasp.DynDispatch
    ParserSpec
    EvalSpec
    RtsBridgeSpec
    InteropSpec
    NativeTypesSpec
    DynLookupSpec
  c-sources:      cbits/rts_bridge.c
  include-dirs:   cbits
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    , base        >= 4.18 && < 5
    , ghc-prim
    , ghc
    , ghc-paths
    , text
    , megaparsec
    , containers
    , mtl
    , hspec
    , hspec-megaparsec
    , directory
  ghc-options:
    -threaded
    -rtsopts
