cabal-version:   3.0
name:            grasp
version:         0.2.0.0
build-type:      Simple

executable grasp
  default-language: GHC2021
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Grasp.Types
    Grasp.Parser
    Grasp.RtsBridge
    Grasp.RuntimeCheck
    Grasp.NativeTypes
    Grasp.Printer
    Grasp.Eval
  c-sources:      cbits/rts_bridge.c
  include-dirs:   cbits
  build-depends:
    , base        >= 4.18 && < 5
    , ghc-prim
    , ghc
    , ghc-paths
    , text
    , megaparsec
    , containers
    , mtl
    , stm
    , directory
    , isocline
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite grasp-test
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Spec.hs
  other-modules:
    Grasp.Types
    Grasp.Parser
    Grasp.RtsBridge
    Grasp.RuntimeCheck
    Grasp.NativeTypes
    Grasp.Printer
    Grasp.Eval
    ParserSpec
    RuntimeCheckSpec
    NativeTypesSpec
    PrinterSpec
    EvalSpec
  c-sources:      cbits/rts_bridge.c
  include-dirs:   cbits
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    , base        >= 4.18 && < 5
    , ghc-prim
    , ghc
    , ghc-paths
    , text
    , megaparsec
    , containers
    , mtl
    , stm
    , hspec
    , hspec-megaparsec
    , directory
  ghc-options:
    -threaded
    -rtsopts
